<resources>
    <string name="app_name">Goal</string>
    <string name="title_index">Aguarde enquanto recuperamos seus Dados…</string>
    <string name="description_goal">Logo GOAL</string>
    <string name="description_app">O seu E-Commerce</string>
    <string name="error_offlineAPI">Não foi possivel iniciar o Aplicativo GOAL.&lt;br />&lt;br /> Aguarde
        enquanto nossa equipe está resolvendo esse Problema.</string>
    <string name="validation_empty">Campo Obrigatorio</string>
    <string name="validation_min_length">%1$s deve ter no Minimo %2$s Caracteres</string>
    <string name="validation_max_length">%1$s deve ter no Maximo %2$s Caracteres</string>
    <string name="validation_format_char">%1$s deve ter conter apenas %2$s</string>
    <string name="validation_format">%1$s deve ter estar no Seguinte Formato: "%2$s"</string>
    <string name="validation_unavailable">%s Invalido. Tente Novamente</string>
    <string name="validation_password">A senha deve conter %s</string>
    <string name="validation_stock">O Estoque deve conter %s Item</string>
    <string name="validation_price">O Preço deve conter %s</string>
    <string name="validation_age">Idade %1$s de <b>%2$s Anos</b></string>
    <string name="validation_equal_password">As Senhas não são Iguais</string>
    <string name="validation_invalid_ddd">DDD Invalido. Tente novamente
        &lt;br/> &lt;br />  Insira o Telefone conforme o Exemplo: (011) 99000-1111 (0 + DDD) + Telefone)
    </string>
    <string name="validation_invalid_cep">O CEP não é compativel com o Endereço Inserido.
        &lt;br/> &lt;br /> Dados do CEP&lt;br /> Endereço: %1$s &lt;br /> Bairro: %2$s &lt;br /> UF: %3$s &lt;br />
        &lt;br /> Verifique os Dados e Tente Novamente !
    </string>
    <string name="validation_disposable_email">Alguns dominios de Emails estão bloqueados por serem
        emails descartaveis. &lt;br/> &lt;br /> Tente Novamente com outro Email!
    </string>
    <string name="validation_invalid_cnpj">Abaixo estão alguns dos Possivies erros do CNPJ &lt;br /> &lt;br />
            &#8226;Verifique o CNPJ (Inscrição, Matriz/Filial, Digitos Verificadores) &lt;br />
            &#8226;Somente são aceitos CNPJs Cadastrados na Receita Federal &lt;br />
            &#8226;Somente são aceitos CNPJs com a Descrição da Situação <b>Ativa</b>
    </string>
    <string name="error_400">Dados Inseridos Incorretos ! Tente Novamente</string>
    <string name="error_404">Os dados Inseridos não Existe ! Tente Novamente</string>
    <string name="error_500">Dados não Encontrados ! Tente Novamente</string>
    <string name="error_generic">Houve um Erro ao executar a Solicitação ! Tente Novamente</string>
    <string name="error_serialization">Houve um erro ao Obter os Dados Solicitados !
        Tente Novamente</string>
    <string name="title_city">Sobre os Municipios/Cidades</string>
    <string name="title_error_api">Solicitação Invalida</string>
    <string name="title_input_invalid">%s Invalido</string>
    <string name="title_no_register_api">Falha no Cadastro</string>
    <string name="title_no_internet">Internet Indisponivel</string>
    <string name="title_loading">Carregando …</string>
    <string name="title_systemOffline">Sistema Indiponivel</string>
    <string name="message_loadingDownload">Obtendo Dados %s no Sistema</string>
    <string name="message_loadingSingUp">Realizando Cadastro do %s no Sistema</string>
    <string name="message_loadingSingIn">Realizando Login no Sistema</string>
    <string name="button_close">Fechar</string>
    <string name="notice_city">Algumas cidades podem não estar aparecendo por conta da divisão
        do municipio. &lt;br />&lt;br /> Por exemplo, a Cidade de <b>São Paulo</b> não está listada, mas suas
        &lt;b>subprefeituras (Butantã, Moema, e outras)&lt;b/> estarão disponiveis. &lt;br />&lt;br /> Busque sua
        Cidade, Municipio ou Subprefeitura na Lista ! </string>
    <string name="error_network">Desculpe, mas não é possivel realizar essa operação
        sem a Internet&lt;br/> &lt;br /> Tente Novamente</string>
    <string name="error_exception">Ocorreu uma Falha ao Executar a Solicitação</string>
    <string name="error_register_api">Não conseguimos Cadastrar o Usuario no Sistema. Por favor,
        Tente Novamente !</string>
    <string name="error_login_api">Usuario não Cadastrado no Sistema.&lt;br />Tente Novamente ou
        Realize o Login !</string>
    <string name="error_singup">Dados Incorretos. Por favor, confirme os dados das
        Etapas Anteriores</string>
    <string name="text_noProducts">O Vendedor não Possui Produtos Cadastrados</string>
    <string name="error_product">Não foi possivel obter o Produto Selecionado</string>
    <string name="error_noMoreProducts">Não há outros Produtos para Mostrar.</string>
    <string name="title_options">Olá, Bem Vindo à GOAL</string>
    <string name="next_stage"><u>Pular essa Etapa</u></string>
    <string name="remember_login">Lembrar Login</string>
    <string name="text_newUser">Não possui Cadastro ?</string>
    <string name="btn_newUser">Cadastre-se</string>
    <string name="btn_singIn">Entrar</string>
    <string name="error_login">Erro ao Buscar o Usuario. Tente Novamente</string>
    <string name="title_singUp">Nos fale um pouco sobre você !</string>
    <string name="title_personal">Dados Pessoais</string>
    <string name="title_documents">Documentos Pessoais</string>
    <string name="title_login">Dados de Login</string>
    <string name="title_termsUse">Termos de Uso</string>
    <string-array name="options_peopleType">
        <item>Vendedor</item>
        <item>Cliente</item>
    </string-array>
    <string name="label_name">Nome</string>
    <string name="label_lastName">Sobrenome</string>
    <string name="label_date_birth">Data de Nascimento</string>
    <string name="label_nickname">Nome de Usuario</string>
    <string name="label_peopleType">Você é um <b>Vendedor</b> ou <b>Cliente</b> ?</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Senha</string>
    <string name="label_confirmPassword">Confirmar Senha</string>
    <string name="hint_name">Qual é o seu <b>Nome</b> ?</string>
    <string name="hint_lastName">Qual é o seu <b>Sobrenome</b> ?</string>
    <string name="hint_date_birth">Ex: 20/12/2005</string>
    <string name="hint_nickname">Ex: "gabriel_souza"</string>
    <string name="hint_email">Digite seu endereço de <b>E-mail</b></string>
    <string name="hint_password">Digite sua <b>Senha</b></string>
    <string name="hint_confirmPassword">Confirme sua <b>Senha</b></string>
    <string name="txt_confirmTermsUse">Aceito os Termos e Condições de Uso</string>
    <string name="btn_seeTermsUse">Ler os Termos de Uso</string>
    <string name="btn_createAcount">Criar Conta</string>
    <string name="errorInputs">Campo obrigatório</string>
    <string name="title_registerOptional">Poderia nos contar mais um Pouco ?</string>
    <string name="title_country">Dados do País</string>
    <string name="title_address">Dados do Endereço</string>
    <string name="label_typeDocument">Usar <b>CPF</b> ou <b>CNPJ</b> ?</string>
    <string name="label_cpf">CPF</string>
    <string name="label_cnpj">CNPJ</string>
    <string name="label_telephone">Telefone</string>
    <string name="label_country">Qual seu <b>País</b> ?</string>
    <string name="label_state">Qual seu <b>Estado</b> ?</string>
    <string name="label_city">Qual seu <b>Municipio</b> ?</string>
    <string name="label_cep">CEP</string>
    <string name="label_address">Endereço</string>
    <string name="label_district">Bairro</string>
    <string name="label_number">Numero</string>
    <string name="label_complement">Complemento</string>
    <string name="text_help">Ajuda</string>
    <string name="hint_cnpj">Ex: 00.000.000/000Y-XX</string>
    <string name="hint_cpf">Ex: 000.000.000-XX</string>
    <string name="hint_phone_br">Ex: (011) 90000–0000</string>
    <string name="hint_phone_international">Ex: 55011999990000 (Codigo País + Codigo de Área
        + Numero de Telefone)</string>
    <string name="hint_cep">Ex: 00000–000</string>
    <string name="hint_address">Ex: "Avenida Paulista"</string>
    <string name="hint_district">Ex: "Bela Vista"</string>
    <string name="hint_number">Ex: "130"</string>
    <string name="hint_complement">Ex: "Apto 401, Bl 06"</string>
    <string-array name="pays">
        <item>Brasil</item>
        <item>Estrangeiro</item>
    </string-array>
    <string name="option_foreign">Estrangeiro</string>
    <string-array name="state">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string-array name="uf">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string name="btn_finishSingUp">Finalizar Cadastro</string>
    <string name="navigation_drawer_open">Abrir Menu Lateral</string>
    <string name="navigation_drawer_close">Fechar Menu Lateral</string>
    <string name="option_home">Inicio</string>
    <string name="option_profile">Seu Perfil</string>
    <string name="option_search">Pesquisar Produto</string>
    <string name="option_wishes">Lista de Desejos</string>
    <string name="titleMenu_categories">Categorias</string>
    <string name="option_equipment">Equipamentos</string>
    <string name="option_accessories">Acessorios</string>
    <string name="option_vitamins">Vitaminas</string>
    <string name="option_clothes">Roupas</string>
    <string name="option_shoes">Calçados</string>
    <string name="option_bags">Bolsas</string>
    <string name="option_others">Outros</string>
    <string name="title_seller">Vendedor</string>
    <string name="option_myProducts">Meus Produtos</string>
    <string name="option_registerProduct">Cadastrar Produto</string>
    <string name="title_otherOptions">Empresa</string>
    <string name="option_contact">Contato GOAL</string>
    <string name="option_about">Sobre a GOAL</string>
    <string name="option_privacy">Politicas de Privacidade</string>
    <string name="option_exit">Sair</string>
    <string name="text_details">Detalhes</string>
    <string name="text_type">Tipo: …</string>
    <string name="text_collor">Cor: …</string>
    <string name="text_size2">Tamanho: …</string>
    <string name="text_material">Material: …</string>
    <string name="text_local">Local de Fabricação: …</string>
    <string name="text_brand">Marca: …</string>
    <string name="text_warranty">Garantia: …</string>
    <string name="text_SAC">SAC do fornecedor: …</string>
</resources>