<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_purchases"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.AddressActivity">

    <LinearLayout
        android:id="@+id/layout_purchases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_fragmentProducts"
            layout="@layout/tool_bar" />

        <TextView
            android:id="@+id/txt_secondStage"
            style="@style/title_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_registerOptional" />

        <Button
            android:id="@+id/btn_skipStage"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/next_stage"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            app:icon="@drawable/ic_next"
            app:iconGravity="end"
            app:iconTint="@color/light_grey" />

        <include
            android:id="@+id/line_goal4"
            layout="@layout/line_gol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_territory"
            style="@style/style_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_dataSingIn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_country"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:id="@+id/switch_country"
                    android:text="@string/option_foreign" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdit_states"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/label_state"
                    android:visibility="visible">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:targetApi="JELLY_BEAN_MR1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdit_city"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/label_city"
                    android:visibility="visible">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:targetApi="JELLY_BEAN_MR1" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:contentDescription="@string/text_help"
                    app:srcCompat="@drawable/ic_help" />


                <!-- Campos p/ Estrangeiros. Layout_margin: 20dp + 10dp-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdit_exState"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_state"
                    android:visibility="gone"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_exState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdit_exCity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/label_city"
                    android:visibility="gone"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_exCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_address"
            style="@style/style_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_dataSingIn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_address"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdit_address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/label_address"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    app:endIconMode="clear_text"
                    app:helperText="@string/hint_address"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdit_district"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/label_district"
                    app:counterEnabled="true"
                    app:counterMaxLength="80"
                    app:endIconMode="clear_text"
                    app:helperText="@string/hint_district"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdit_cep"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/label_cep"
                    android:visibility="gone"
                    app:endIconMode="clear_text"
                    app:helperText="@string/hint_cep"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_cep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdit_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/label_number"
                    app:counterEnabled="true"
                    app:counterMaxLength="7"
                    app:endIconMode="clear_text"
                    app:helperText="@string/hint_number"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdit_complement"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/label_complement"
                    app:counterEnabled="true"
                    app:counterMaxLength="80"
                    app:endIconMode="clear_text"
                    app:helperText="@string/hint_complement"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_complement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_registerCompleteUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/btn_finishSingUp"
            android:textColor="@color/white_light"
            android:textSize="18sp" />

    </LinearLayout>


</ScrollView>
